feat: train added

--- a/views/author.ejs
+++ b/views/author.ejs
@@ -350,7 +350,7 @@
       </div>
     </div>
 
-    <script>
+    <!-- <script>
       setInterval(() => {
         fetch("/author")
           .then((response) => response.text())
@@ -358,6 +358,6 @@
             document.body.innerHTML = html;
           });
       }, 1000);
-    </script>
+    </script> -->
   </body>
 </html>
