--- a/views/reja.ejs
+++ b/views/reja.ejs
@@ -62,5 +62,7 @@
         Hammasini Rejalarni ochirish
       </button>
     </div>
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    <script src="/browser.js"></script>
   </body>
 </html>
