--- a/views/harid.ejs
+++ b/views/harid.ejs
@@ -35,6 +35,7 @@
       </div>
       <button
         class="btn btn-primary"
+        id="clean-all"
         style="background-color: red; border-radius: 20px"
       >
         Hammasini ochirish
